# static-embedding

./: .gitignore  Cargo.toml  README.md  pyproject.toml  python_example.py
.github/workflows/: publish.yml
python_files/: benchmark.py  test_embed.py
src/: embedder.rs  lib.rs
