[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "static_embed"
version = "0.1.1"
requires-python = ">=3.8"
authors = [{name = "Alon Agmon", email = "alon.agmon@gmail.com"}]
description = "Static sentence embedding via Rust + Candle wrapped for Python"
readme = "README.md"
license = {text = "MIT"} 